fixed hero image size on mobile

--- a/app/styles/3-pages/_home.scss
+++ b/app/styles/3-pages/_home.scss
@@ -70,6 +70,7 @@ $breakpoint-cell: 500px;
     height: 500px;
     width: auto;
     @media (max-width: $breakpoint-cell) {
+      height: 400px;
       padding-bottom: 50px;
     }
   }
